// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a default dropdown menu 1`] = `
<div>
  <button
    aria-controls="menu--1"
    aria-haspopup="true"
    class="usa-button usa-button--base"
    data-reach-menu-button=""
    id="menu-button--menu--1"
    type="button"
  >
    Example text
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-caret-down fa-w-10 margin-left-1"
      data-icon="caret-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`renders a secondary menu button 1`] = `
<div>
  <button
    aria-controls="menu--12"
    aria-haspopup="true"
    class="usa-button usa-button--secondary"
    data-reach-menu-button=""
    id="menu-button--menu--12"
    type="button"
  >
    Example text
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-caret-down fa-w-10 margin-left-1"
      data-icon="caret-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`renders an accent menu button 1`] = `
<div>
  <button
    aria-controls="menu--17"
    aria-haspopup="true"
    class="usa-button usa-button--accent-cool"
    data-reach-menu-button=""
    id="menu-button--menu--17"
    type="button"
  >
    Example text
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-caret-down fa-w-10 margin-left-1"
      data-icon="caret-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`renders an outlined menu button 1`] = `
<div>
  <button
    aria-controls="menu--7"
    aria-haspopup="true"
    class="usa-button usa-button--outline"
    data-reach-menu-button=""
    id="menu-button--menu--7"
    type="button"
  >
    Example text
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-caret-down fa-w-10 margin-left-1"
      data-icon="caret-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`renders an unstyled menu button 1`] = `
<div>
  <button
    aria-controls="menu--22"
    aria-haspopup="true"
    class="usa-button usa-button--unstyled"
    data-reach-menu-button=""
    id="menu-button--menu--22"
    type="button"
  >
    Example text
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-caret-down fa-w-10 margin-left-1"
      data-icon="caret-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;
